# llm-tranformers

./: .gitignore  README.md  default_config.yml  main.py  medical-dataset-example.py  medical-dataset-prompts.md  medical-datasets-guide.md  phi4-transformers-accelerate.py  phi4-transformers.ipynb  pyproject.toml
